--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">WarehouseApp</string>
     <string name="action_settings">Settings</string>
-    <string name="home_fragment_label">Home</string>
+    <string name="home_fragment_label">WarehouseApp</string>
     <string name="details_fragment_label">Details</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
